tests/ui/privacy/pub-priv-dep/transitive-private-leaf.stderr
error: type `DType` from private dependency 'transitive_private_leaf_d' in public interface
  --> $DIR/transitive-private-leaf.rs:23:1
   |
LL | pub fn exposes_d() -> transitive_private_leaf_b::DType {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/transitive-private-leaf.rs:11:9
   |
LL | #![deny(exported_private_dependencies)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error
